--- a/stories.html
+++ b/stories.html
@@ -101,6 +101,16 @@
         .sidebar-loader {
             @apply animate-spin h-5 w-5 text-mudalali-green mx-auto;
         }
+        
+        /* === WENAS KALE MEKA (1/3) === */
+        .dropdown-menu {
+            @apply hidden;
+        }
+        .group.open .dropdown-menu {
+            @apply block;
+        }
+        /* === WENAS KAMA IWARAI === */
+
     </style>
 </head>
 <body class="pb-20 md:pb-0" style="background-color: #f5f5f4;"> 
@@ -139,11 +149,11 @@
         </div>
     </header>
 
-    <nav class="bg-mudalali-bg shadow-sm hidden md:block" style="border-bottom: 1px solid #e5e5e5;">
+   <nav class="bg-mudalali-bg shadow-sm hidden md:block relative z-30" style="border-bottom: 1px solid #e5e5e5;">
         <div class="container mx-auto px-4 flex justify-between items-center">
             <div id="desktop-nav-links-container" class="flex space-x-6">
-                <div class="relative group">
-                    <a href="#" class="flex items-center bg-mudalali-green text-white px-4 py-2.5 rounded-t-md font-bold">
+                <div class="relative group" id="categories-dropdown-group">
+                    <a href="#" id="categories-dropdown-btn" class="flex items-center bg-mudalali-green text-white px-4 py-2.5 rounded-t-md font-bold">
                         <i class="fa fa-bars mr-2"></i>
                         Categories
                         <i class="fa fa-chevron-down text-xs ml-2"></i>
@@ -157,7 +167,6 @@
             </a>
         </div>
     </nav>
-
     <header class="bg-white shadow-md sticky top-0 z-40 flex md:hidden items-center justify-between p-4">
         <button id="mobile-menu-btn" class="text-2xl text-gray-700">
             <i class="fa fa-bars"></i>
@@ -207,7 +216,7 @@
                         </svg>
                         <p class="mt-2 text-gray-500 font-semibold">Loading Stories...</p>
                     </div>
-                    </div>
+                </div>
 
                 <div id="stories-infinite-loader" class="text-center py-10 hidden">
                     <svg class="animate-spin h-6 w-6 text-mudalali-green mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -226,7 +235,7 @@
                             <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
                         </svg>
                     </div>
-                    </div>
+                </div>
             </aside>
 
         </div>
@@ -412,6 +421,10 @@ function captureAffiliateRef() {
             setupMobileDrawers(); 
             setupCommentDrawer();
             
+            // --- ALUTH: Categories Dropdown Click Logic ---
+            setupDesktopCategoriesClick();
+            // --- IWARAI ---
+
             if (pageLoader) {
                 pageLoader.style.width = '100%';
                 setTimeout(() => { pageLoader.classList.add('hidden'); }, 500);
@@ -1387,7 +1400,7 @@ function captureAffiliateRef() {
                                 ${creatorBadge}
                             </div>
                             <p class="text-sm text-gray-700">${comment.commentText}</p>
-                            <p class="text-xs text-gray-400 mt-1">${commentDate}</p>
+                            <p classText-xs text-gray-400 mt-1">${commentDate}</p>
                         </div>
                     </div>
                     `;
@@ -1476,6 +1489,28 @@ function captureAffiliateRef() {
                 }
             }
         }
+
+        // --- ALUTH: Categories Dropdown Click Logic Function (3/3) ---
+        function setupDesktopCategoriesClick() {
+            const dropdownGroup = document.getElementById('categories-dropdown-group');
+            const dropdownBtn = document.getElementById('categories-dropdown-btn');
+
+            if (dropdownGroup && dropdownBtn) {
+                dropdownBtn.addEventListener('click', (e) => {
+                    e.preventDefault(); // href="#" eka wada karana eka nawaththanawa
+                    dropdownGroup.classList.toggle('open');
+                });
+
+                // Bonus: Dropdown eken eliye click kaloth eka wahanna
+                document.addEventListener('click', (e) => {
+                    if (!dropdownGroup.contains(e.target)) {
+                        dropdownGroup.classList.remove('open');
+                    }
+                });
+            }
+        }
+        // --- WENAS KAMA IWARAI ---
+
     </script>
 </body>
 </html>
