--- a/seller-profile.html
+++ b/seller-profile.html
@@ -69,7 +69,7 @@
         <div class="p-4 border-b">
             <a href="index.html" class="flex items-center gap-2">
                 <img id="logo-img" src="https://i.ibb.co/1tCywvyP/logo.png" class="h-10" alt="Logo">
-                <span class="text-xl font-bold text-mudalali-green-dark">Dashboard</span>
+                <span class="text-xl font-bold text-mudalali-green-dark"></span>
             </a>
         </div>
         <nav class="flex-grow p-4 space-y-2 overflow-y-auto">
